--- a/index.html
+++ b/index.html
@@ -1,12 +1,145 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles/style.css">
+
+    <!-- daisyUI CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- font awesome CDN -->
+    <script src="https://kit.fontawesome.com/76bb063785.js" crossorigin="anonymous"></script>
+
+    <!-- google font CDN -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <!-- tailwind style  -->
+    <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                clifford: '#da373d',
+              }
+            }
+          }
+        }
+      </script>
+
 </head>
-<body>
-    
+<body class="manrope-font">
+    <!-- header -->
+    <header class="container mx-auto">
+      <!-- navbar start here -->
+      <nav>
+        <div class="navbar bg-base-100">
+          <div class="navbar-start">
+            <div class="dropdown">
+              <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-5 w-5"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor">
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M4 6h16M4 12h8m-8 6h16" />
+                </svg>
+              </div>
+              <ul
+                tabindex="0"
+                class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+                <li><a>Home</a></li>
+                <li><a>About</a></li>
+                <li><a>Pages</a></li>
+                <li><a>Blog</a></li>
+                <li><a>Contact</a></li>
+              </ul>
+            </div>
+            <a class="text-2xl md:text-4xl font-extrabold">Hockey<span class="text-red-500 space-x-0">’</span>s</a>
+          </div>
+          <div class="navbar-center hidden lg:flex">
+            <ul class="menu menu-horizontal px-2 text-lg">
+              <li class="hover:text-red-600 ease-in-out-300"><a>Home</a></li>
+              <li class="hover:text-red-600 ease-in-out-300"><a>About</a></li>
+              <li class="hover:text-red-600 ease-in-out-300"><a>Pages</a></li>
+              <li class="hover:text-red-600 ease-in-out-300"><a>Blog</a></li>
+              <li class="hover:text-red-600 ease-in-out-300"><a>Contact</a></li>
+            </ul>
+          </div>
+          <div class="navbar-end space-x-3">
+            <h1><i class="fa-solid fa-magnifying-glass text-xl"></i></h1>
+            <a class="btn bg-red-600 text-white text-xl font-bold">Get ticket</a>
+          </div>
+        </div>
+      </nav>
+
+      <!-- banner section start here -->
+      <section class="my-12">
+        <div class="relative">
+          <!-- carousel  -->
+          <div class="carousel w-full">
+            <div id="slide1" class="carousel-item absolute w-full ">
+              <img
+                src="Images/1.png"
+                class="w-full" />
+              <div class="absolute flex bottom-5 space-x-7 left-6">
+                <a href="#slide4" class="btn btn-circle text-white bg-slate-900 border-none">❮</a>
+                <a href="#slide2" class="btn btn-circle text-white bg-slate-900 border-none">❯</a>
+              </div>
+            </div>
+            <div id="slide2" class="carousel-item relative w-full">
+              <img
+                src="Images/1.png"
+                class="w-full" />
+              <div class="absolute flex bottom-5 space-x-7 left-6">
+                <a href="#slide1" class="btn btn-circle text-white bg-slate-900 border-none">❮</a>
+                <a href="#slide3" class="btn btn-circle text-white bg-slate-900 border-none">❯</a>
+              </div>
+            </div>
+            <div id="slide3" class="carousel-item relative w-full">
+              <img
+                src="Images/1.png"
+                class="w-full" />
+              <div class="absolute flex bottom-5 space-x-7 left-6">
+                <a href="#slide2" class="btn btn-circle text-white bg-slate-900 border-none">❮</a>
+                <a href="#slide4" class="btn btn-circle text-white bg-slate-900 border-none">❯</a>
+              </div>
+            </div>
+            <div id="slide4" class="carousel-item relative w-full">
+              <img
+                src="Images/1.png"
+                class="w-full" />
+              <div class="absolute flex bottom-5 space-x-7 left-6">
+                <a href="#slide3" class="btn btn-circle text-white bg-slate-900 border-none">❮</a>
+                <a href="#slide1" class="btn btn-circle text-white bg-slate-900 border-none">❯</a>
+              </div>
+            </div>
+          </div>
+          <!-- banner box -->
+          <div class="p-8 mt-5 lg:mt-0 bg-black lg:w-1/3 space-y-4 border rounded-lg absolute lg:bottom-6 lg:right-3 ">
+            <h1 class="text-2xl text-white font-extrabold">Meet all the heroes from the field</h1>
+            <p class="text-gray-300">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+          </div>
+        </div>
+      </section>
+    </header>
+
+    <!-- main -->
+    <main>
+
+    </main>
+
+    <!-- footer -->
+    <footer>
+        
+    </footer>
 </body>
 </html>
