done the section

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
       <!-- banner section start here -->
       <section class="my-12">
-        <div class="relative">
+        <div class="lg:relative">
           <!-- carousel  -->
           <div class="carousel w-full">
             <div id="slide1" class="carousel-item absolute w-full ">
@@ -124,7 +124,7 @@
             </div>
           </div>
           <!-- banner box -->
-          <div class="p-8 mt-5 lg:mt-0 bg-black lg:w-1/3 space-y-4 border rounded-lg absolute lg:bottom-6 lg:right-3 ">
+          <div class="p-8 mt-5 lg:mt-0 bg-black lg:w-1/3 space-y-4 border rounded-lg lg:absolute lg:bottom-6 lg:right-3 ">
             <h1 class="text-2xl text-white font-extrabold">Meet all the heroes from the field</h1>
             <p class="text-gray-300">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
           </div>
@@ -133,7 +133,65 @@
     </header>
 
     <!-- main -->
-    <main>
+    <main class="container mx-auto">
+
+      <!-- Professional -->
+      <section>
+        <!-- text -->
+        <div class="p-6 lg:p-12 text-center border-y-2 border-gray-300 border-dashed ">
+          <h1 class="text-2xl md:text-4xl font-extrabold">Professional Hockeys Club</h1>
+          <p class="text-gray-500 lg:w-1/3 mx-auto mt-4">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+        </div>
+        <!-- rating  -->
+        <div class="mx-4 md:mx-0 py-6 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+          <!-- prog-1 -->
+          <div>
+           <div class="relative">
+            <div class="radial-progress text-red-600 z-10" style="--value:87;" role="progressbar">87%</div>
+            <div class="radial-progress text-gray-500 absolute top-0 left-0 rotate-180" style="--value:70;" role="progressbar"></div>
+           </div>
+            <div class="space-y-2 mt-4">
+              <h1 class="text-xl font-semibold">Prayer Facility</h1>
+              <p class="text-gray-700">Amet consectetur. Condimentum dignissim adipiscing .</p>
+            </div>
+          </div>
+          <!-- prog-2 -->
+          <div>
+            <div class="relative">
+             <div class="radial-progress text-blue-600 z-10" style="--value:90;" role="progressbar">90%</div>
+             <div class="radial-progress text-gray-500 absolute top-0 left-0 rotate-180" style="--value:70;" role="progressbar"></div>
+            </div>
+             <div class="space-y-2 mt-4">
+               <h1 class="text-xl font-semibold">Experienced Coach</h1>
+               <p class="text-gray-700">Amet consectetur. Condimentum dignissim adipiscing .</p>
+             </div>
+           </div>
+          <!-- prog-3 -->
+          <div>
+            <div class="relative">
+             <div class="radial-progress text-yellow-500 z-10" style="--value:90;" role="progressbar">90%</div>
+             <div class="radial-progress text-gray-500 absolute top-0 left-0 rotate-180" style="--value:70;" role="progressbar"></div>
+            </div>
+             <div class="space-y-2 mt-4">
+               <h1 class="text-xl font-semibold">Senior Player</h1>
+               <p class="text-gray-700">Amet consectetur. Condimentum dignissim adipiscing .</p>
+             </div>
+           </div>
+          <!-- prog-4 -->
+          <div>
+            <div class="relative">
+             <div class="radial-progress text-green-600 z-10" style="--value:90;" role="progressbar">90%</div>
+             <div class="radial-progress text-gray-500 absolute top-0 left-0 rotate-180" style="--value:70;" role="progressbar"></div>
+            </div>
+             <div class="space-y-2 mt-4">
+               <h1 class="text-xl font-semibold">Training Ground</h1>
+               <p class="text-gray-700">Amet consectetur. Condimentum dignissim adipiscing .</p>
+             </div>
+           </div>
+        </div>
+      </section>
+
+      <!--  -->
 
     </main>
 
